# lattice

./: .env.sample  .gitignore  AGENTS.md  README.md  langgraph.json  main.py  pyproject.toml
doc/: api-reqs.md  api.json  roadmap.md  workflow.md
doc/api/: README.md  openapi.json  tests.md  usage.md
doc/tests/: README.md  test_api.md
doc/tests/backends/: test_virtual_filesystem.md
doc/tests/tools/: test_filesystem_tools.md
examples/: simple_reasoning_agent.py  simple_reasoning_agent_solution.md
notebooks/: langgraph-course.ipynb  starter-agent.ipynb  starter-agent.py  starter-agent2.ipynb  starter-agent3.ipynb
src/: settings.py
src/api/: app.py
src/api/routes/: __init__.py  runs.py  threads.py
src/api/services/: agent.py  stores.py
src/backends/: __init__.py  custom.py  filesystem.py  virtual_filesystem.py
src/config/: settings.py
src/graphs/: __init__.py  ask.py  state.py
src/prompts/: README.md  __init__.py  domain_knowledge.py  structured_outputs.py  system.py  template.py
src/schemas/: __init__.py  api.py  filesystem.py  prompts.py  research_plan.py
src/services/: __init__.py
src/tools/: __init__.py  filesystem.py  filesystem_tools.py  instructions.py  thinking.py  utils.py
src/utils/: logger.py  printer.py  run_async.py  stats.py
tests/: conftest.py  test_api.py
tests/backends/: test_virtual_filesystem.py
tests/tools/: test_filesystem_tools.py
