[project]
name = "lattice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "openalexapi>=0.0.1a0",
    "pandas>=3.0.0",
    "qdrant-client>=1.16.2",
]
