[project]
name = "lattice"
version = "0.1.0"
description = "A physics research agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catppuccin>=2.5.0",
    "deepagents>=0.3.8",
    "fastapi>=0.128.0",
    "fs>=2.4.16",
    "jupyter>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "langgraph-cli[inmem]>=0.4.12",
    "langsmith>=0.6.4",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "openalexapi>=0.0.1a0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "rich>=14.3.1",
    "sse-starlette>=2.1.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
